# voxelToyEngine

./: CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.txt
lib/: CMakeLists.txt
lib/glad/: glad.c
lib/glad/include/glad/: glad.h
src/: main.cpp
src/core/: application.cpp  application.h  window.cpp  window.h
src/game/: GameEngine.h  blockID.h  chunk.cpp  chunk.h  gameEngine.cpp  gameEngine.h  world.cpp  world.h  worldBuilder.cpp  worldBuilder.h
src/graphics/: renderer.cpp  renderer.h
